[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/pause_menu_background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PauseMenuItemFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Pause_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/SFX/menu-select-1.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/SFX/menu_thud.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
resource_name = "SFX_volume_active"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLabels/SFX_volume:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, -70 ), Vector2( -200, -60 ), Vector2( -200, -70 ), Vector2( -200, -80 ), Vector2( -200, -70 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "continue_active"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLabels/Continue:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, -140 ), Vector2( -200, -150 ), Vector2( -200, -140 ), Vector2( -200, -130 ), Vector2( -200, -140 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "music_volume_active"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("MenuLabels/Music_volume:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 10 ), Vector2( -200, 0 ), Vector2( -200, 10 ), Vector2( -200, 20 ), Vector2( -200, 10 ) ]
}

[node name="Pause_menu" type="CanvasLayer"]
pause_mode = 2
offset = Vector2( 512, 300 )
transform = Transform2D( 1, 0, 0, 1, 512, 300 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 1 )

[node name="MenuLabels" type="Node" parent="."]

[node name="Continue" type="Label" parent="MenuLabels"]
margin_left = -200.0
margin_top = -140.0
margin_right = 200.0
margin_bottom = -63.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Continue
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_volume" type="Label" parent="MenuLabels"]
margin_left = -200.0
margin_top = -70.0
margin_right = 200.0
margin_bottom = 2.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 2 )
text = "SFX volume: 100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_volume" type="Label" parent="MenuLabels"]
margin_left = -200.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 82.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Music vol: 100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_to_main_menu" type="Label" parent="MenuLabels"]
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 152.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SFX_volume_active = SubResource( 2 )
anims/continue_active = SubResource( 1 )
anims/music_volume_active = SubResource( 3 )

[node name="Audioplayer" type="Node" parent="."]

[node name="MenuChange" type="AudioStreamPlayer" parent="Audioplayer"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="MenuThud" type="AudioStreamPlayer" parent="Audioplayer"]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"
